--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -519,126 +519,126 @@
                                     <md-card-content>
                                         <md-list-item>
                                             <span>Title</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.title}}
                                             </span>
                                         </md-list-item>
                                         <md-divider></md-divider>
                                         <md-list-item>
                                             <span>Subject</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.subject}}
                                             </span>
                                         </md-list-item>
                                         <md-divider></md-divider>
                                         <md-list-item ng-if="taskAddObj.greeting">
                                             <span>Greeting</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.greeting}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.greeting"></md-divider>
-                                        <md-list-item class="md-3-line">
-                                            <span>Body</span>
-                                            <span class="md-secondary">
+                                        <md-list-item>
+                                            <span flex flex-gt-sm="20">Body</span>
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.body}}
                                             </span>
                                         </md-list-item>
                                         <md-divider></md-divider>
                                         <md-list-item ng-if="taskAddObj.salutation">
                                             <span>Phone</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.salutation}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.salutation"></md-divider>
                                         <md-list-item ng-if="taskAddObj.link">
                                             <span>Link</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.link}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.link"></md-divider>
                                         <md-list-item ng-if="taskAddObj.customURL">
                                             <span>Custom Link</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.customURL}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.customURL"></md-divider>
                                         <md-list-item>
                                             <span>Channels</span>
-                                            <span class="md-secondary">
-                                            {{taskAddObj.channels.toString()}}
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
+                                            {{taskAddObj.channels.join(', ')}}
                                             </span>
                                         </md-list-item>
                                         <md-divider></md-divider>
                                         <md-list-item ng-if="taskAddObj.send_to_users">
                                             <span>Send To Individuals</span>
-                                            <span class="md-secondary">
-                                            {{taskAddObj.send_to_users.toString()}}
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
+                                            {{taskAddObj.send_to_users.length > 1 ? 'Multiple Users' : 'Single User'}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.send_to_users"></md-divider>
                                         <md-list-item ng-if="taskAddObj.send_to_roles">
                                             <span>Send To Groups</span>
-                                            <span class="md-secondary">
-                                            {{taskAddObj.send_to_roles.toString()}}
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
+                                            {{taskAddObj.send_to_roles.join(', ')}}
                                             </span>
                                         </md-list-item>
                                         <md-divider></md-divider>
                                         <md-list-item ng-if="taskAddObj.send_report_to_users">
                                             <span>Report To Individuals</span>
-                                            <span class="md-secondary">
-                                            {{taskAddObj.send_report_to_users.toString()}}
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
+                                            {{taskAddObj.send_report_to_users.length > 1 ? 'Multiple Users' : 'Single User'}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.send_report_to_users"></md-divider>
                                         <md-list-item>
                                             <span>Report To Groups</span>
-                                            <span class="md-secondary">
-                                            {{taskAddObj.alert_roles.toString()}}
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
+                                            {{taskAddObj.alert_roles.join(', ')}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.send_report_to_users"></md-divider>
                                         <md-list-item>
                                             <span>Task Type</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.task_type}}
                                             </span>
                                         </md-list-item>
                                         <md-divider></md-divider>
                                         <md-list-item ng-if="taskAddObj.frequency">
                                             <span>Reoccurs</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.frequency}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.frequency"></md-divider>
                                         <md-list-item ng-if="taskAddObj.run_week">
                                             <span>Runs On Week</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.run_week + 1}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.run_week"></md-divider>
                                         <md-list-item>
                                             <span>Day Of The Week</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.run_day == 0 ? 'Sunday' : taskAddObj.run_day == 1 ? 'Monday' : taskAddObj.run_day == 2 ? 'Tuesday' : taskAddObj.run_day == 3 ? 'Wednesday' : taskAddObj.run_day == 4 ? 'Thursday' : taskAddObj.run_day == 5 ? 'Friday' : taskAddObj.run_day == 6 ? 'Saturday' : 'Not Determined'}}
                                             </span>
                                         </md-list-item>
-                                        <md-divider ng-if="taskAddObj.run_day"></md-divider>
                                         <md-list-item ng-if="taskAddObj.task_date">
                                             <span>Runs On This Date</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.task_date}}
                                             </span>
                                         </md-list-item>
                                         <md-divider ng-if="taskAddObj.task_date"></md-divider>
+                                        <md-divider ng-if="!taskAddObj.task_date"></md-divider>
                                         <md-list-item>
                                             <span>Runs At This Time</span>
-                                            <span class="md-secondary">
+                                            <span flex flex-gt-sm="80" md-truncate class="md-secondary">
                                             {{taskAddObj.run_clock_time}}
                                             </span>
                                         </md-list-item>
