--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -21,8 +21,8 @@
         <div ng-include src="'application/partials/backend-menu.html'"></div>
 
         <!-- =================== App Header =================== -->
-            <md-card-title style="position: absolute; top: 0; left: 0; width: 100%;" layout="row" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center" layout-wrap>
-                <div style="position:relative;" layout="row" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center" layout-wrap>
+            <md-card-title style="position: relative; top: 0; left: 0; width: 100%;" layout="row" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center" layout-wrap>
+
 
                 <!-- =================== Start Action Buttons =================== -->
                 <md-button ng-click="toggleSidebar()" class="md-fab md-mini" aria-label="open backend sidebar" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
@@ -40,7 +40,7 @@
 
                 <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel adding a new task?" ng-confirm-click="closeCreateTask(); clearForm(createTaskForm)" ng-confirm-condition="true">close</md-icon>
 
-                </div>
+
             </md-card-title>
         <!-- =================== App Header =================== -->
 
