--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -12,48 +12,53 @@
     <!-- header -->
     <md-subheader class="header" layout="row" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center" layout-wrap flex style="z-index: 5; border-bottom: 1px solid #e0e0e0; position: relative; height: 84px!important" ng-class="{'header-ms-explorer': browser == 'ie'}">
 
-        <!-- Mini App Title -->
-        <div flex="100" flex-gt-sm="25" layout-align="start center" layout-align-gt-sm="center center" layout="row">
-            <h3 class="md-headline" style="font-size: 24px;">MyVault</h3>
-        </div>
-        <!-- Mini App Title -->
+        <div layout="row" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center" layout-wrap flex>
+            <!-- Mini App Title -->
+            <div flex="100" flex-gt-sm="25" layout-align="start center" layout-align-gt-sm="start center" layout="row">
+                <h3 class="md-headline" style="font-size: 24px;">MyVault</h3>
+            </div>
+            <!-- Mini App Title -->
 
-        <!-- =================== Start Action Buttons =================== -->
-        <md-button ng-click="toggleSidebar()" class="md-fab md-mini" aria-label="open backend sidebar" style="position: absolute; bottom: -16px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
-            <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">menu</md-icon>
-        </md-button>
-
-        <!-- =================== Action Buttons - Account =================== -->
-        <md-menu>
-            
-            <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style="position: absolute; bottom: -16px; left: 73px; background-color: {{base_hue_lightest.value}}!important;">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Open Options Menu" md-font-library="material-icons">settings</md-icon>
+            <!-- =================== Start Action Buttons =================== -->
+            <md-button ng-click="toggleSidebar()" class="md-fab md-mini" aria-label="open backend sidebar" style="position: absolute; bottom: -16px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">menu</md-icon>
             </md-button>
 
-            <md-menu-content width="4">
-                <md-menu-item>
-                    <md-button ng-click="openPasswordReset(me)">
-                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">rotate_left</md-icon>
-                        Reset Password
-                    </md-button>
-                </md-menu-item>
-                <md-menu-item>
-                    <md-button>
-                        <md-icon ng-click="deleteUser()" style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">delete</md-icon>
-                        Remove Account
-                    </md-button>
-                </md-menu-item>
-            </md-menu-content>
+            <!-- =================== Action Buttons - Account =================== -->
+            <md-menu>
+                
+                <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style="position: absolute; bottom: -16px; left: 73px; background-color: {{base_hue_lightest.value}}!important;">
+                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Open Options Menu" md-font-library="material-icons">settings</md-icon>
+                </md-button>
 
-        </md-menu>
+                <md-menu-content width="4">
+                    <md-menu-item>
+                        <md-button ng-click="openPasswordReset(me)">
+                            <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">rotate_left</md-icon>
+                            Reset Password
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button>
+                            <md-icon ng-click="deleteUser()" style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">delete</md-icon>
+                            Remove Account
+                        </md-button>
+                    </md-menu-item>
+                </md-menu-content>
 
-        <!-- =================== End Action Buttons =================== -->
+            </md-menu>
 
-        <!-- Navigation Items -->
-        <div flex="25" flex-gt-sm="75" layout-align="end center" layout="row" ng-init="navigation_panel = false">
-            <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to leave?" ng-confirm-click="closeMyVault()" ng-confirm-condition="true">close</md-icon>
+            <!-- =================== End Action Buttons =================== -->
+
+            <!-- Navigation Items -->
+            <div flex="25" flex-gt-sm="75" layout-align="end center" layout="row" ng-init="navigation_panel = false">
+                <md-button class="md-icon-button" aria-label="Close My Vault">
+                    <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to leave?" ng-confirm-click="closeMyVault()" ng-confirm-condition="true">close</md-icon>
+                </md-button>
+            </div>
+            <!-- Navigation Items -->
+
         </div>
-        <!-- Navigation Items -->
 
     </md-subheader>
     <!-- header -->
