--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -215,8 +215,8 @@
                                                 </md-list-item>
                                                 <md-list-item class="md-dense" ng-if="!me.files" flex>
                                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
-                                                    <div class="md-list-item-text">
-                                                        <h3 style="font-size: 16px;">No Files</h3>
+                                                    <div class="md-secondary">
+                                                        <p>No Files</p>
                                                     </div>
                                                 </md-list-item>
                                             </md-list>
@@ -244,10 +244,10 @@
                                                         <p ng-class="{'bold': notification.unread == true}" md-truncate>{{notification.title}} | {{notification.subject}}</p>
                                                         <md-divider ng-if="!$last"></md-divider>
                                                     </md-list-item>
-                                                    <md-list-item flex>
+                                                    <md-list-item ng-if="me.notifications.length < 1" flex>
                                                         <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
-                                                        <div class="md-list-item-text">
-                                                            <h3 style="font-size: 16px;">No Notifications</h3>
+                                                        <div class="md-secondary">
+                                                            <p>No Notifications</p>
                                                         </div>
                                                     </md-list-item>
                                                 </md-list>
@@ -377,14 +377,19 @@
                                                     <p md-truncate>{{file.name || file.title}}</p>
                                                     <span class="md-secondary" ng-show="hovered">
                                                         <a href="{{file.link}}" target="_blank" style="text-decoration: none;">
-                                                            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">launch</md-icon>
+                                                            <md-button class="md-icon-button" aria-label="Close My Vault">
+                                                                <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">launch</md-icon>
+                                                            </md-button>
                                                         </a>
-                                                        &nbsp;
-                                                        <md-icon ng-click="openShare(file)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
-                                                        &nbsp;
-                                                        <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_download</md-icon>
-                                                        &nbsp;
-                                                        <md-icon ng-click="deleteMyFile(me, file)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">delete</md-icon>
+                                                        <md-button class="md-icon-button" aria-label="Close My Vault">
+                                                            <md-icon ng-click="openShare(file)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
+                                                        </md-button>
+                                                        <md-button class="md-icon-button" aria-label="Close My Vault">
+                                                            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_download</md-icon>
+                                                        </md-button>
+                                                        <md-button class="md-icon-button" aria-label="Close My Vault">
+                                                            <md-icon ng-click="deleteMyFile(me, file)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">delete</md-icon>
+                                                        </md-button>
                                                     </span>
                                                     <md-divider ng-if="!$last"></md-divider>
                                                 </md-list-item>
