--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -233,18 +233,18 @@
                                 <md-card style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex="100">
                                         <md-card-header>
                                             <md-card-header-text>
-                                                <span class="md-title">Notifications</span>
-                                                <span class="md-subhead">Manage Notifications</span>
+                                                <span class="md-title">Chatter</span>
+                                                <span class="md-subhead">Manage Incoming Notifications</span>
                                             </md-card-header-text>
                                         </md-card-header>
                                         <md-card-content>
                                             <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                                 <md-list class="md-dense" flex>
-                                                    <md-list-item ng-repeat="notification in me.notifications | limitTo:3" flex>
+                                                    <md-list-item ng-repeat="notification in me.chatter | limitTo:3" flex>
                                                         <p ng-class="{'bold': notification.unread == true}" md-truncate>{{notification.title}} | {{notification.subject}}</p>
                                                         <md-divider ng-if="!$last"></md-divider>
                                                     </md-list-item>
-                                                    <md-list-item ng-if="me.notifications.length < 1" flex>
+                                                    <md-list-item ng-if="me.chatter.length < 1" flex>
                                                         <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
                                                         <div class="md-secondary">
                                                             <p>No Notifications</p>
