--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -54,11 +54,11 @@
                                 <md-divider ng-if="!$last"></md-divider>
                             </md-list-item>
                         </md-list>
-                        <md-list ng-if="tasklist.length == 0" class="md-dense" flex>
+                        <md-list ng-if="!tasklist.length" class="md-dense" flex>
                             <md-list-item flex>
                                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
                                 <div class="md-list-item-text">
-                                    <h3 style="font-size: 16px;">You don't have any tasks configured yet.</h3>
+                                    <p class="md-secondary" md-truncate>You don't have any tasks configured yet.</p>
                                 </div>
                             </md-list-item>
                         </md-list>
@@ -70,14 +70,14 @@
                 <md-card class="md-card-base" style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex="100">
                         <md-card-header>
                             <md-card-header-text>
-                                <span class="md-title">App Notifications</span>
-                                <span class="md-subhead">Incoming Messages For {{settings.data.company_name}}</span>
+                                <span class="md-title">App Chatter</span>
+                                <span class="md-subhead">Incoming Notifications For {{settings.data.company_name}}</span>
                             </md-card-header-text>
                         </md-card-header>
                         <md-card-content>                             
                             <md-list-item class="md-dense" flex>
                                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
-                                <p md-truncate>You don't have any incoming messsages yet.</p>
+                                <p class="md-secondary" md-truncate>You don't have any incoming messsages yet.</p>
                             </md-list-item>        
                     </md-card-content>
                     <md-card-actions layout="row" layout-align="end center" flex>
