--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -244,7 +244,7 @@
                                                         <p ng-class="{'bold': notification.unread == true}" md-truncate>{{notification.title}} | {{notification.subject}}</p>
                                                         <md-divider ng-if="!$last"></md-divider>
                                                     </md-list-item>
-                                                    <md-list-item ng-if="me.chatter.length < 1" flex>
+                                                    <md-list-item ng-if="!me.chatter" flex>
                                                         <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
                                                         <div class="md-secondary">
                                                             <p>No Notifications</p>
