--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -77,7 +77,7 @@
 
     
 
-        <md-card class="suite-dialog md-card-base card inputs">
+        <md-card class="md-card-base card inputs">
 
             <md-card-content flex>
 
