--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -213,9 +213,9 @@
                                                     <p md-truncate>{{file.name || file.title}}</p>
                                                     <md-divider ng-if="!$last"></md-divider>
                                                 </md-list-item>
-                                                <md-list-item class="md-dense" ng-if="!me.files" flex>
+                                                <md-list-item class="md-dense" ng-if="!me.files" flex layout="row" layout-align="start center">
                                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
-                                                    <div class="md-secondary">
+                                                    <div>
                                                         <p>No Files</p>
                                                     </div>
                                                 </md-list-item>
@@ -244,9 +244,9 @@
                                                         <p ng-class="{'bold': notification.unread == true}" md-truncate>{{notification.title}} | {{notification.subject}}</p>
                                                         <md-divider ng-if="!$last"></md-divider>
                                                     </md-list-item>
-                                                    <md-list-item ng-if="!me.chatter" flex>
+                                                    <md-list-item ng-if="!me.chatter" flex layout="row" layout-align="start center">
                                                         <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
-                                                        <div class="md-secondary">
+                                                        <div>
                                                             <p>No Notifications</p>
                                                         </div>
                                                     </md-list-item>
