fab button backend ux

--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -28,7 +28,7 @@
                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">menu</md-icon>
                 </md-button>
                 <!-- Mini App Menu Button -->
-                
+
                 <!-- =================== Change Setting View =================== -->
                 <md-menu>
                     <md-button ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open backend sidebar" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
@@ -594,13 +594,13 @@
                     </div>
                     <div ng-show="staffgridview == true" layout="column" layout-gt-sm="row" layout-align="center center" flex layout-wrap layout-margin>
                         <md-card class="md-card-base" ng-repeat="staff in settings.staff.members" ng-init="staff_detail_view = false" flex="100" flex-gt-sm="30" style="margin-bottom: 16px; position: relative; background: #fafafa; border: 1px solid rgba(33,33,33,.15);">
-                            <md-button ng-show="!staff_detail_view" class="md-fab md-mini" aria-label="edit staff member" style="position: absolute; top: 16px; right: 16px; background-color: {{primary_hue_normal.value}}!important;" ng-click="staff_detail_view = true">
+                            <md-button ng-show="!staff_detail_view" class="md-icon-button custom-deep-button" aria-label="edit staff member" style="position: absolute; top: 16px; right: 16px; background-color: {{primary_hue_normal.value}}!important;" ng-click="staff_detail_view = true">
                                 <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="edit staff member" md-font-library="material-icons">mode_edit</md-icon>
                             </md-button>
-                            <md-button ng-show="staff_detail_view" class="md-fab md-mini" aria-label="edit staff member" style="position: absolute; top: 8px; right: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-click="staff_detail_view = false">
+                            <md-button ng-show="staff_detail_view" class="md-icon-button custom-deep-button" aria-label="edit staff member" style="position: absolute; top: 8px; right: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-click="staff_detail_view = false">
                                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="edit staff member" md-font-library="material-icons">mode_edit</md-icon>
                             </md-button>
-                            <md-button ng-show="!staff_detail_view" class="md-fab md-mini" aria-label="change photo" style="position: absolute; top: 64px; right: 16px; background-color: {{primary_hue_normal.value}}!important;" ng-click="mediavault_filepicker(staff)">
+                            <md-button ng-show="!staff_detail_view" class="md-icon-button custom-deep-button" aria-label="change photo" style="position: absolute; top: 64px; right: 16px; background-color: {{primary_hue_normal.value}}!important;" ng-click="mediavault_filepicker(staff)">
                                 <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="change photo" md-font-library="material-icons">insert_photo</md-icon>
                             </md-button>
                             <img ng-if="staff.source" ng-show="!staff_detail_view" ng-cloak ng-src="{{staff.source}}" class="md-card-image">
